--- a/intern/package.json
+++ b/intern/package.json
@@ -10,10 +10,12 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "^2.39.0",
     "autoprefixer": "10.4.15",
+    "chart.js": "^4.4.1",
     "geist": "^1.0.0",
     "next": "latest",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-uuid": "^2.0.0",
     "tailwindcss": "3.3.3",
