--- a/intern/package.json
+++ b/intern/package.json
@@ -17,7 +17,8 @@
     "react-dom": "18.2.0",
     "react-uuid": "^2.0.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
