--- a/intern/package.json
+++ b/intern/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-uuid": "^2.0.0",
     "tailwindcss": "3.3.3",
+    "ts-node": "^10.9.2",
     "typescript": "5.1.3",
     "uuid": "^9.0.1"
   },
