--- a/intern/package.json
+++ b/intern/package.json
@@ -10,6 +10,7 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "^2.39.0",
     "autoprefixer": "10.4.15",
+    "axios": "^1.6.2",
     "chart.js": "^4.4.1",
     "geist": "^1.0.0",
     "next": "latest",
