--- a/intern/package.json
+++ b/intern/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.1",
     "geist": "^1.0.0",
     "next": "latest",
+    "node": "^21.2.0",
     "pg": "^8.11.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
