--- a/intern/package.json
+++ b/intern/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "dotenv": "^16.3.1",
     "geist": "^1.0.0",
     "next": "latest",
     "node": "^21.2.0",
