--- a/intern/package.json
+++ b/intern/package.json
@@ -6,6 +6,9 @@
     "start": "next start",
     "reset": "ts-node lib/database/scripts/resetDatabase.ts"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/ssr": "latest",
