--- a/intern/package.json
+++ b/intern/package.json
@@ -7,7 +7,7 @@
     "reset": "ts-node lib/database/scripts/resetDatabase.ts"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">20.0.0"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.8.7",
