--- a/intern/package.json
+++ b/intern/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "reset": "ts-node lib/database/scripts/resetDatabase.ts"
+    "reset-main-db": "ts-node lib/database/scripts/resetDatabase.ts",
+    "reset-test-db": "ts-node lib/database/tests/testScripts/resetTestDatabase.ts"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.8.7",
