--- a/intern/package.json
+++ b/intern/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "geist": "^1.0.0",
     "next": "latest",
     "pg": "^8.11.3",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.41",
+    "@types/express": "^4.17.21",
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
