--- a/intern/package.json
+++ b/intern/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "geist": "^1.0.0",
+    "morgan": "^1.10.0",
     "next": "latest",
     "pg": "^8.11.3",
     "postcss": "8.4.29",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/chart.js": "^2.9.41",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
