--- a/intern/package.json
+++ b/intern/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "geist": "^1.0.0",
