--- a/intern/package.json
+++ b/intern/package.json
@@ -15,8 +15,10 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "express": "^4.18.2",
     "geist": "^1.0.0",
     "next": "latest",
+    "ngrok": "^5.0.0-beta.2",
     "pg": "^8.11.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.41",
+    "@types/express": "^4.17.21",
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
