--- a/intern/package.json
+++ b/intern/package.json
@@ -16,16 +16,14 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
-
     "dotenv": "^16.3.1",
-
     "express": "^4.18.2",
     "geist": "^1.0.0",
     "morgan": "^1.10.0",
     "next": "latest",
-    "ngrok": "^5.0.0-beta.2",
     "pg": "^8.11.3",
     "postcss": "8.4.29",
+    "pump": "^3.0.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
@@ -38,13 +36,12 @@
   "devDependencies": {
     "@types/chart.js": "^2.9.41",
     "@types/express": "^4.17.21",
-
     "@types/morgan": "^1.9.9",
-
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
     "@types/uuid": "^9.0.7",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "ngrok": "^5.0.0-beta.2"
   }
 }
