--- a/intern/package.json
+++ b/intern/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.1",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "geist": "^1.0.0",
     "json2csv": "^6.0.0-alpha.2",
     "morgan": "^1.10.0",
