--- a/intern/package.json
+++ b/intern/package.json
@@ -21,7 +21,7 @@
     "geist": "^1.0.0",
     "json2csv": "^6.0.0-alpha.2",
     "morgan": "^1.10.0",
-    "next": "latest",
+    "next": "^14.0.4",
     "path": "^0.12.7",
     "pg": "^8.11.3",
     "postcss": "8.4.29",
