--- a/intern/package.json
+++ b/intern/package.json
@@ -47,6 +47,7 @@
     "@types/uuid": "^9.0.7",
     "encoding": "^0.1.13",
     "eslint-config-next": "^14.0.4",
-    "ngrok": "^5.0.0-beta.2"
+    "ngrok": "^5.0.0-beta.2",
+    "tsconfig-paths": "^4.2.0"
   }
 }
