--- a/intern/tsconfig.json
+++ b/intern/tsconfig.json
@@ -4,7 +4,7 @@
     "transpileOnly": true,
     "files": true,
     "compilerOptions": {
-      "module": "CommonJS"
+      "module": "CommonJS",
     }
   },
 "compilerOptions": {
