--- a/intern/package.json
+++ b/intern/package.json
@@ -36,6 +36,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
     "@types/chart.js": "^2.9.41",
     "@types/express": "^4.17.21",
     "@types/json2csv": "^5.0.7",
