--- a/intern/package.json
+++ b/intern/package.json
@@ -39,6 +39,7 @@
     "@playwright/test": "^1.40.1",
     "@types/chart.js": "^2.9.41",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/json2csv": "^5.0.7",
     "@types/morgan": "^1.9.9",
     "@types/node": "20.3.1",
@@ -48,7 +49,10 @@
     "@types/uuid": "^9.0.7",
     "encoding": "^0.1.13",
     "eslint-config-next": "^14.0.4",
+    "jest": "^29.7.0",
     "ngrok": "^5.0.0-beta.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "tsconfig-paths": "^4.2.0"
   }
 }
