--- a/intern/package.json
+++ b/intern/package.json
@@ -46,6 +46,7 @@
     "@types/pg": "^8.10.9",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
+    "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.7",
     "encoding": "^0.1.13",
     "eslint-config-next": "^14.0.4",
