--- a/intern/tsconfig.json
+++ b/intern/tsconfig.json
@@ -16,7 +16,7 @@
   ],
   "allowJs": true,
   "skipLibCheck": true,
-  "strict": true,
+  "strict": false,
   "noEmit": true,
   "incremental": true,
   "esModuleInterop": true,
